# FINETUNE-ON-AWS

./: .gitignore  README.md  deployment_of_model.ipynb  flask_inference_app.py  main.py  pyproject.toml  requirements_inference_simple.txt  requirements_minimal.txt  requirements_streamlit.txt  scan_sagemaker_costs.sh  show_commands.sh
awscost/: cost_estimator_remove_resource.py  demo_cost_scanner.py
docs/: API_SUCCESS.md  COST_VERIFICATION_REPORT.md  DEPENDENCY_SOLUTION.md  PYTHON_UPGRADE_COMPLETE.md  PYTHON_VERSION_FIX.md
finetuning/: estimator_launcher.ipynb  estimator_launcher_latest.ipynb
finetuning/experiments/: experiment.ipynb  experiment_old (1).ipynb
localtest/: simple_api_test.py
